--- a/wealth-wise/package.json
+++ b/wealth-wise/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "framer-motion": "^12.23.11",
     "next": "15.4.4",
