--- a/wealth-wise/package.json
+++ b/wealth-wise/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/x-charts": "^8.10.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.11",
+    "igniteui-react": "^19.2.0",
+    "igniteui-react-charts": "^19.0.1",
+    "igniteui-react-core": "^19.0.1",
+    "igniteui-react-excel": "^19.0.1",
+    "igniteui-react-gauges": "^19.0.1",
+    "igniteui-react-grids": "^19.2.0",
+    "igniteui-react-maps": "^19.0.1",
+    "igniteui-react-spreadsheet": "^19.0.1",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
