--- a/wealth-wise/package.json
+++ b/wealth-wise/package.json
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-overlays": "^5.2.1",
+    "recharts": "^3.1.2",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
